# VideoMimic

./: .gitignore  README.md
real2sim/stage4_retargeting/: robot_motion_retargeting.py
sim2real/: CMakeLists.txt  README.md
sim2real/scripts/: start_robot.sh
sim2real/videomimic_real/: CMakeLists.txt  videomimic_inference_real.cpp
simulation/: README.md  README_CN.md  setup.md  setup_CN.md  观测计算.md  调用流程图.md
simulation/data/: download_gdrive_data.sh  download_videomimic_data.sh
simulation/videomimic_gym/: .gitignore  README.md  mesh_fit.py  setup.py  validate_h5_data.py
simulation/videomimic_gym/legged_gym/envs/: __init__.py
simulation/videomimic_gym/legged_gym/scripts/: generate_terrains_amass.py  place_trace.py  play.py  play_flat_policy.sh  play_terrain_policy.sh  playt_mcpt_policy.sh  test_config.py  train.py  train_stage_1_mcpt.sh  train_stage_2_terrain_rl.sh  train_stage_3_distillation.sh  train_stage_4_rl_finetune.sh
simulation/videomimic_gym/legged_gym/tensor_utils/: replay_data.py  torch_jit_utils.py
simulation/videomimic_gym/legged_gym/utils/: __init__.py  array.py  configclass.py  deepmimic_terrain.py  dict.py  helpers.py  history.py  isaacgym_utils.py  math.py  string.py  task_registry.py  terrain.py  viser_visualizer.py
simulation/videomimic_gym/resources/data_config/: 1_motion.yaml  4_motion.yaml  A_test.yaml  human_motion_list_123_motions.yaml
simulation/videomimic_rl/: setup.py
simulation/videomimic_rl/rsl_rl/algorithms/: ppo.py
simulation/videomimic_rl/rsl_rl/modules/: actor_critic.py  actor_critic_recurrent.py
(+24 files in other folders)
